--- a/AHC_MLK/AHC_MLK/Views/MemberList/Index.cshtml
+++ b/AHC_MLK/AHC_MLK/Views/MemberList/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@model IEnumerable<AHCBL.Dto.Admin.MemberListDto>
-
+@{
+    ViewBag.Title = "Member";
+}
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
